00004/constraints/constraints-disallowed-tags.yml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowedTags
metadata:
  name: disallowed-tags
spec:
  # enforcementAction: warn
  match:
    namespaces: ["dev"]
    kinds:
      - apiGroups: [""]
        kinds: 
        - Pod
      - apiGroups: ["apps"]
        kinds:
        - StatefulSet
        - Deployment
        - ReplicaSet
  parameters:
    tags: ["latest"]
