00004/constraints/constraints-required-labels.yml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: required-labels
spec:
  match:
    namespaces: ["stg"]
    kinds:
      - apiGroups: [""]
        kinds:
        - ConfigMaps
        - Pods
        - Secrets
      - apiGroups: ["apps"]
        kinds:
        - Deployments
        - ReplicaSets
  parameters:
    labels:
      - key: app.kubernetes.io/name
